# Facedetect_OpenCV-OpenVINO

./: CMakeLists.txt  LICENSE  README.md  facedetect.cpp  facedetect.py
